--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Для WebKit-браузеров (Chrome, Edge, Opera, Safari) */
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
@@ -37,14 +36,23 @@
   margin: 0 auto;
 }
 
+.main-name {
+  margin-bottom: 1em;
+  border-bottom: #4caf50 1px solid;
+}
+
 .message {
-  max-width: 75%;
   padding: 0.75rem 1rem;
   border-radius: 1rem;
   font-size: 1rem;
   line-height: 1.4;
   word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
   border: 1px solid #ccc;
+  max-width: 80%;      
+  width: fit-content;
+  min-width: 20%;
 }
 
 .message.user {
@@ -57,4 +65,22 @@
   align-self: flex-end;
   border-color: #a5d6a7;
   background: transparent;
+  margin-left: auto;
+  text-align: right;
 }
+
+.delivery-status {
+  font-size: 0.75rem;
+  margin-top: 2px;
+  margin-bottom: 6px;
+}
+
+.status-success {
+  color: #4caf50;
+}
+
+.status-error {
+  color: #f44336;
+}
+
+
