--- a/src/components/MessageForm/MessageForm.css
+++ b/src/components/MessageForm/MessageForm.css
@@ -1,7 +1,7 @@
 .form {
   display: flex;
   justify-content: center;
-  align-items: flex-end; /* 👈 ровняем по нижнему краю */
+  align-items: flex-end;
   gap: 0.5rem;
   margin-top: 1.5em;
   margin-bottom: 0.5em;
